--- a/Sentrii/index.html
+++ b/Sentrii/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sentrii</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      html,
       body {
-        width: 400px; 
-        height: 600px;
+        width: 400px; /* Your desired width */
+        height: 600px; /* Your desired height */
+        margin: 0;
+        padding: 0;
+        font-family: "Roboto", sans-serif;
+        background-color: #ffff;
+      }
+      #root {
+        width: 100%;
+        height: 100%;
+        display: flex;
+
+        flex-direction: column;
       }
     </style>
   </head>
