--- a/Sentrii/index.html
+++ b/Sentrii/index.html
@@ -6,8 +6,8 @@
     <title>Sentrii</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
+
     <style>
       * {
         margin: 0;
@@ -16,8 +16,8 @@
       }
       html,
       body {
-        width: 400px; /* Your desired width */
-        height: 600px; /* Your desired height */
+        width: 400px;
+        height: 600px;
         margin: 0;
         padding: 0;
         font-family: "Roboto", sans-serif;
